feat: throw a crash excecption when a frame fails